[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/general/VarsAndDesign.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/general/AdminNote.tscn" type="PackedScene" id=2]
[ext_resource path="res://graphics/TransparentButton.png" type="Texture" id=3]
[ext_resource path="res://src/rooms/Room_TH_ADMIN.gd" type="Script" id=4]
[ext_resource path="res://graphics/Verwaltung_Notiz Zeugnis_neu.png" type="Texture" id=5]
[ext_resource path="res://graphics/Zeugnis_neu.png" type="Texture" id=6]
[ext_resource path="res://graphics/Verwaltung_low.JPG" type="Texture" id=7]
[ext_resource path="res://font/besley/Besley-Fatface.otf" type="DynamicFontData" id=8]
[ext_resource path="res://graphics/general/Note2.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 8 )

[node name="RoomADMIN" type="Node2D"]
script = ExtResource( 4 )

[node name="TotallyTopLayer" type="CanvasLayer" parent="."]
layer = 6

[node name="DialogBox" type="ColorRect" parent="TotallyTopLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.729412, 0.729412, 0.729412, 0.745098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Note2" type="Sprite" parent="TotallyTopLayer/DialogBox"]
position = Vector2( 542.677, 320 )
scale = Vector2( 0.48824, 0.488241 )
texture = ExtResource( 9 )

[node name="DialogOkButton" type="TouchScreenButton" parent="TotallyTopLayer/DialogBox"]
position = Vector2( 699.294, 383.8 )
scale = Vector2( 0.100854, 0.135635 )
normal = ExtResource( 3 )

[node name="Content" type="Label" parent="TotallyTopLayer/DialogBox"]
margin_left = 267.0
margin_top = 200.0
margin_right = 775.0
margin_bottom = 379.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "Sieh dir das Zeugnis, den Zettel am Zeugnis und die Klingel genauer an."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="BackgroundUnfocus" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Admin_note" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 512, 300 )
texture = ExtResource( 5 )

[node name="Zeugnis" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 528.511, 312.894 )
rotation = -0.161447
scale = Vector2( 0.793937, 0.793937 )
texture = ExtResource( 6 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="CanvasLayer2"]
position = Vector2( 512, 300 )
scale = Vector2( 0.682657, 0.682657 )
texture = ExtResource( 7 )

[node name="VarsAndDesign" parent="CanvasLayer2" instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0

[node name="CanvasLayer5" type="CanvasLayer" parent="."]
layer = -1

[node name="AdminNote" parent="CanvasLayer5" instance=ExtResource( 2 )]
position = Vector2( 845.345, 124.804 )
rotation = -0.123955
scale = Vector2( 0.4, 0.4 )
z_index = 5

[node name="ZoomAdminNote" type="TouchScreenButton" parent="CanvasLayer5/AdminNote"]
position = Vector2( -2253.21, 274.638 )
rotation = -0.244346
scale = Vector2( 0.267607, 0.324688 )
normal = ExtResource( 3 )

[node name="ZoomAdminNote2" type="TouchScreenButton" parent="CanvasLayer5/AdminNote"]
position = Vector2( -2060.55, 359.482 )
rotation = -0.244346
scale = Vector2( 0.507205, 0.1098 )
normal = ExtResource( 3 )

[node name="ZoomAdminNote3" type="TouchScreenButton" parent="CanvasLayer5/AdminNote"]
position = Vector2( -2078.47, 287.595 )
rotation = -0.244346
scale = Vector2( 0.328831, 0.123296 )
normal = ExtResource( 3 )

[node name="ZoomAdminNote4" type="TouchScreenButton" parent="CanvasLayer5/AdminNote"]
position = Vector2( -2091.65, 234.755 )
rotation = -0.244346
scale = Vector2( 0.0942006, 0.0905576 )
normal = ExtResource( 3 )

[node name="Zeugnis" type="Sprite" parent="CanvasLayer5/AdminNote"]
position = Vector2( 156.618, 142.014 )
scale = Vector2( 0.473677, 0.473677 )
z_index = -1

[node name="Zeugnis1" type="TouchScreenButton" parent="CanvasLayer5/AdminNote/Zeugnis"]
position = Vector2( -4782.1, 644.57 )
rotation = -0.0174533
scale = Vector2( 2.92559, 1.40186 )
normal = ExtResource( 3 )

[node name="Zeugnis2" type="TouchScreenButton" parent="CanvasLayer5/AdminNote/Zeugnis"]
position = Vector2( -4105.35, 474.699 )
rotation = -0.0174533
scale = Vector2( 2.03905, 0.37424 )
normal = ExtResource( 3 )

[node name="Zeugnis3" type="TouchScreenButton" parent="CanvasLayer5/AdminNote/Zeugnis"]
position = Vector2( -3743.49, 352.7 )
rotation = -0.0174533
scale = Vector2( 1.22559, 0.261394 )
normal = ExtResource( 3 )

[node name="Zeugnis4" type="TouchScreenButton" parent="CanvasLayer5/AdminNote/Zeugnis"]
position = Vector2( -5005.1, 701.138 )
rotation = -0.0174533
scale = Vector2( 0.276281, 1.21377 )
normal = ExtResource( 3 )

[node name="Zeugnis5" type="TouchScreenButton" parent="CanvasLayer5/AdminNote/Zeugnis"]
position = Vector2( -2436.6, 744.735 )
rotation = -0.0174533
scale = Vector2( 0.451406, 1.16672 )
normal = ExtResource( 3 )

[node name="Zeugnis6" type="TouchScreenButton" parent="CanvasLayer5/AdminNote/Zeugnis"]
position = Vector2( -2069.04, 1084.45 )
rotation = -0.0174533
scale = Vector2( 0.80057, 0.589914 )
normal = ExtResource( 3 )

[node name="NoteClickAwayDeadzone" type="ColorRect" parent="CanvasLayer5"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GetToAdminBot" type="TouchScreenButton" parent="CanvasLayer5"]
position = Vector2( 828.752, 277.281 )
scale = Vector2( 0.209953, 0.254368 )
normal = ExtResource( 3 )

[node name="GetToAdminBot2" type="TouchScreenButton" parent="CanvasLayer5"]
position = Vector2( 910.647, 240.743 )
scale = Vector2( 0.0382887, 0.077979 )
normal = ExtResource( 3 )
[connection signal="released" from="TotallyTopLayer/DialogBox/DialogOkButton" to="." method="_on_DialogOkButton_released"]
[connection signal="released" from="CanvasLayer5/AdminNote/ZoomAdminNote" to="." method="_on_ZoomAdminNote_released"]
[connection signal="released" from="CanvasLayer5/AdminNote/ZoomAdminNote2" to="." method="_on_ZoomAdminNote_released"]
[connection signal="released" from="CanvasLayer5/AdminNote/ZoomAdminNote3" to="." method="_on_ZoomAdminNote_released"]
[connection signal="released" from="CanvasLayer5/AdminNote/ZoomAdminNote4" to="." method="_on_ZoomAdminNote_released"]
[connection signal="released" from="CanvasLayer5/AdminNote/Zeugnis/Zeugnis1" to="." method="_on_Zeugnis1_released"]
[connection signal="released" from="CanvasLayer5/AdminNote/Zeugnis/Zeugnis2" to="." method="_on_Zeugnis1_released"]
[connection signal="released" from="CanvasLayer5/AdminNote/Zeugnis/Zeugnis3" to="." method="_on_Zeugnis1_released"]
[connection signal="released" from="CanvasLayer5/AdminNote/Zeugnis/Zeugnis4" to="." method="_on_Zeugnis1_released"]
[connection signal="released" from="CanvasLayer5/AdminNote/Zeugnis/Zeugnis5" to="." method="_on_Zeugnis1_released"]
[connection signal="released" from="CanvasLayer5/AdminNote/Zeugnis/Zeugnis6" to="." method="_on_Zeugnis1_released"]
[connection signal="released" from="CanvasLayer5/GetToAdminBot" to="." method="_on_GetToAdminBot_released"]
[connection signal="released" from="CanvasLayer5/GetToAdminBot2" to="." method="_on_GetToAdminBot_released"]
